Last controller Fixes
