# src/swagger.json
@@ -5,7 +5,7 @@
     "description": "Retrieve data for an authenticated user through web tokens making REST requests GET, POST, PUT, DELETE from a Tasks database in MongoDB.",
     "version": "1.0.0"
   },
-  "host": "crud-agenda-2hjq.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
@@ -274,6 +274,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Reminders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -313,6 +316,9 @@
     },
     "/reminders/{reminderId}": {
       "get": {
+        "tags": [
+          "Reminders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -338,6 +344,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Reminders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -531,20 +540,19 @@
     },
     "/notes/": {
       "get": {
-        "tags": ["Notes"],
-        "description": "Get all notes or a specific note by ID",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": false,
-            "type": "string"
-          }
+        "tags": [
+          "Notes"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -552,8 +560,10 @@
         }
       },
       "post": {
-        "tags": ["Notes"],
-        "description": "Create a new note",
+        "tags": [
+          "Notes"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -589,6 +599,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -601,9 +614,13 @@
     },
     "/notes/{id}": {
       "get": {
-        "tags": ["Notes"],
-        "description": "Get a specific note by ID",
-        "produces": ["application/json"],
+        "tags": [
+          "Notes"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -616,14 +633,19 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": ["Notes"],
-        "description": "Update a note by ID",
+        "tags": [
+          "Notes"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -643,16 +665,13 @@
                 "description": {
                   "example": "any"
                 },
-                "category": {
+                "due_date": {
                   "example": "any"
                 },
                 "priority": {
                   "example": "any"
                 },
                 "status": {
-                  "example": "any"
-                },
-                "dueDate": {
                   "example": "any"
                 },
                 "assignedTo": {
@@ -666,6 +685,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -675,8 +697,10 @@
         }
       },
       "delete": {
-        "tags": ["Notes"],
-        "description": "Delete a note by ID",
+        "tags": [
+          "Notes"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -688,6 +712,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
